--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,87 +6,85 @@ on:
     types: [created]
 
 jobs:
-  Node_Tests:
+  node_tests:
     runs-on: ubuntu-latest
 
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      # - name: Use Node.js 13.x
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: 13.x
+      - name: Use Node.js 13.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 13.x
 
-      # - name: Install Node dependencies
-      #   run: npm --prefix gui install gui
+      - name: Install Node dependencies
+        run: npm --prefix gui install gui
 
-      # - name: Build 
-      #   run: npm --prefix gui build --if-present
+      - name: Build Project
+        run: npm --prefix gui build --if-present
 
       - name: Run Node tests
-        run: which Xvfb
-        env:
-          CI: true
+        run: npm --prefix gui test
 
-  # Python_Tests:
-  #   runs-on: ubuntu-latest
+  python_tests:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #       with:
-  #         ref: ${{github.sha}}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{github.sha}}
 
-  #     - name: Set up Python 3.7
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.7
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
 
-  #     - name: Install dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         python -m pip install --upgrade black
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade black
 
-  #     - name: Lint with black
-  #       run: black --check .
+      - name: Lint with black
+        run: black --check .
 
-  #     - name: Run Python Tests
-  #       run: python setup.py test
+      - name: Run Python Tests
+        run: python setup.py test
 
-  # Build_And_Publish:
-  #   needs: [Python_Tests, Node_Tests]
-  #   if: success()
-  #   runs-on: ubuntu-latest
+  build_and_publish:
+    needs: [python_tests, node_tests]
+    if: success()
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #       with:
-  #         ref: ${{github.sha}}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{github.sha}}
 
-  #     - name: Set up Python 3.7
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.7
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
 
-  #     - name: Use Node.js 13.x
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 13.x
+      - name: Use Node.js 13.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 13.x
 
-  #     - name: Install Python build dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         python -m pip install wheel
+      - name: Install Python build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install wheel
 
-  #     - name: Build Source and Binary wheel distributions
-  #       run: python setup.py bdist_wheel sdist  
+      - name: Build Source and Binary wheel distributions
+        run: python setup.py bdist_wheel sdist
 
-  #     - name: Publish to PyPI.
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         user: __token__
-  #         verbose: true
-  #         password: ${{ secrets.PYPI_TOKEN }}
-  #         repository_url: https://upload.pypi.org/legacy/
+      - name: Publish to PyPI.
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          verbose: true
+          password: ${{ secrets.PYPI_TOKEN }}
+          repository_url: https://upload.pypi.org/legacy/
