Ensuring black check fails in both flows

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Lint with black
         run: |
-          black --check .
+          black -check .
 
       - name: Test with pytest
         run: |
